Removed o-ft-icons and using unicode multiplication sign instead. Does not fix alignment issues

--- a/src/scss/overlay.scss
+++ b/src/scss/overlay.scss
@@ -52,15 +52,18 @@
 }
 
 %o-overlay__close-icon {
-	@include oFtIconsBaseIconStyles();
-	@extend %o-ft-icons-icon--cross;
 	width: 18px;
 	height: 18px;
-	font-size: 10px;
-	line-height: 19px;
+	font-size: 15px;
+	line-height: 17px;
 	border: 1px solid;
 	border-radius: 50%;
 	@include oColorsFor(o-overlay-close);
+
+	&:after {
+		// Hex code for multiplication sign
+		content: "\00D7";
+	}
 
 	#{$o-hoverable-if-hover-enabled} &:hover {
 		color: oColorsGetColorFor(o-overlay-close-shaded, text);
@@ -147,8 +150,8 @@
 	%o-overlay__close-icon {
 		width: 14px;
 		height: 14px;
-		font-size: 8px;
-		line-height: 15px;
+		font-size: 12px;
+		line-height: 14px;
 	}
 
 	%o-overlay__close {
